# wjmclock

./: CLAUDE.md  Cargo.toml  Cross.toml  README.org  build.rs  justfile  wjmclock.example.toml
.github/workflows/: build.yml  release.yml
scripts/: install.sh
src/: app.rs  cli.rs  color.rs  config.rs  error.rs  layout.rs  main.rs  textures.rs
src/elements/: callsign.rs  clock.rs  map.rs  mod.rs  propagation.rs  text_stack.rs
src/geo/: coastline.rs  maidenhead.rs  mod.rs  projection.rs  terminator.rs
src/propagation/: bands.rs  kc2g.rs  mod.rs  noaa.rs
