[package]
name = "wjmclock"
version = "0.1.3"
edition = "2024"
authors = ["Albin Stigö <albin.stigo@gmail.com>"]
description = "Rust reimplementation of HamClock — desktop war-room clock and HF propagation dashboard."
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
thiserror = "2"
anyhow = "1"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34"
serde = { version = "1", features = ["derive"] }
toml = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.10"
geojson = "1"
directories = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
nom = "7"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
